--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,10 +9,10 @@ unbind C-b
 
 ## ペインのキーバインド
 
-# \でペインを垂直分割する
+# prefix+\でペインを垂直分割する
 bind \\ split-window -h
 
-# -でペインを水平分割する
+# prefix+-でペインを水平分割する
 bind - split-window -v
 
 # ペインの移動
@@ -63,4 +63,13 @@ setw -g window-status-format '#[fg=colour242] #I #W '
 
 # windowのインデックスを1から始める
 set -g base-index 1
+
+
+## その他
+
+# マウス操作を有効にする
+set-option -g mouse on
+
+# prefix+r で設定のリロード
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
